--- a/sections.html
+++ b/sections.html
@@ -7,16 +7,17 @@
   </head>
   <body>
     <div>
+      <section>
       <h1>Section One</h1>
       <a href="https://snapit.guroo.academy/home" target="_parent">Snap IT</a>
 
       <a href="https://youtube.com" target="_blank">YouTube</a>
 
       <a href="https://w3school.com" target="_self">w3school</a>
+      </section>
     </div>
-
+    <section>
     <h1>Section Two</h1>
-
     <div>
       <a href="https://www.Snapchat.com" target="_blank">Snapchat</a>
 
@@ -26,6 +27,8 @@
         href="https://assets.vogue.com/photos/65f04d926294babad5413eb1/master/w_2560%2Cc_limit/GettyImages-1380534040.jpg"
         target="_parent"
         >Venice</a
+       
+      
       >
     </div>
   </body>
