--- a/semantic.html
+++ b/semantic.html
@@ -6,13 +6,16 @@
     <title>Task 3</title>
   </head>
   <body>
-    <h1>Page heading</h1>
+    <h1>Page</h1>
   </body>
 </html>
 
-<header>Task 3</header>
+<header>Page Heading</header>
 <main>
-  <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti, quae commodi magni quis esse?</section>
-  <section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates non sapiente a quis ad quo?</section>
+  <section>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti, quae commodi magni quis esse?</p>
+  </section>
+  <section>
+   <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates non sapiente a quis ad quo?</p>
 </main>
 <footer>Daniel Johnson (07/08/2024)</footer>
